Fix dark mode for arnak, streetcar & theisleofcatsduel

--- a/src/css/dark_theme/forum.less
+++ b/src/css/dark_theme/forum.less
@@ -1530,3 +1530,11 @@ img[src="./images/smilies/icon_twisted.gif"] {
     display: none;
   }
 }
+
+#errorpage #content h1 {
+  color: var(--red-10);
+}
+
+#errorpage #content div {
+  color: var(--light-70);
+}
